src/objects/Housing_Application_Note__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Housing_Application__c</fullName>
        <label>Related To</label>
        <referenceTo>Housing_Application__c</referenceTo>
        <relationshipLabel>Housing Application Notes</relationshipLabel>
        <relationshipName>Housing_Application_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <label>Housing Application Note</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Housing Application Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>